# csi-eval

./: .gitignore  README.md  README_zh.md  __init__.py  cli.py  pyproject.toml  requirements.txt  version.py
.github/_workflows/: release.yml  tests.yml
core/: __init__.py  config.py  evaluator.py  report.py
csieval/: __init__.py  cli.py  py.typed  version.py
csieval/core/: config.py  context.py  evaluator.py  protocols.py  registries.py
csieval/loaders/: __init__.py  adapter.py
csieval/metrics/: __init__.py  generalization.py  robustness.py
csieval/models/: __init__.py
csieval/presets/: ev_csinet_2_6GHz.reference.yaml
csieval/reports/: __init__.py  html_report.py  json_report.py
csieval/tasks/: __init__.py
csieval/tasks/eigenvector_feedback/: __init__.py
csieval/tasks/eigenvector_feedback/_internal/: _delay_angle_csi.py  _eigen_preprocess.py  _wair_d.py
csieval/tasks/eigenvector_feedback/_internal/utils/: complex_utils.py
data_generation_scripts/data/Dataset/: generator.py  parameters.py  util.py
data_generation_scripts/scripts/: generate_part1_subset.py  generate_part2.py  generate_waird_csi_feedback_data.py
loaders/: __init__.py
metrics/: _math.py  computation.py  efficiency.py  task_performance.py
models/: __init__.py
presets/: ev_csinet_2_6GHz.reference.yaml
reports/: html_report.py  markdown_report.py
runners/: __init__.py
tasks/: __init__.py
tasks/eigenvector_feedback/_internal/: _delay_angle_csi.py  _eigen_preprocess.py  _wair_d.py
tasks/eigenvector_feedback/_internal/utils/: complex_utils.py
tests/: demo.py  smoke_test.py
